upravena kapitola 2 podle Radkovych poznamek

--- a/sablona-prace.tex
+++ b/sablona-prace.tex
@@ -135,6 +135,8 @@
 \usepackage{amsmath}	% dalsi matematika (např.: prostredi split)
 \usepackage{placeins} % prikaz \FloatBarrier (nedovoli obrazky presunout do jine sekce)
 \usepackage{float}		% [H] u obrazku/tabulek
+\usepackage{soul}			% prikaz \hl (highlight)
+%\sethlcolor{yellow}		% barva pro highlight
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%       Začátek dokumentu               %%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
