zapracovnání poznámek k první kapitole

--- a/text/jtag_2w.tex
+++ b/text/jtag_2w.tex
@@ -44,7 +44,7 @@ Při komunikaci pomocí dvouvodičového \acs{JTAG} rozhraní se stává pin \te
 \section{Aktivační sekvence dvouvodičové varianty \acs{JTAG} protokolu}
 Pro volbu komunikace pomocí dvouvodičové varianty \acs{JTAG} protokolu je zapotřebí provedení aktivace tohoto režimu, která je definována standardem IEEE 1149.7. Jelikož aktivaci musí být možné provést kdykoliv, tedy i při komunikaci dvouvodičovou variantou, jsou k ní využity piny \texttt{\acs{TCKC}} a \texttt{\acs{TMSC}}. Varianta \acs{JTAG} protokolu je volena debuggerem, který vyvolá příslušnou aktivační sekvenci na pinech \texttt{\acs{TCKC}} a \texttt{\acs{TMSC}}. \cite{IEEE_1149-7}
 
-Aktivační sekvence se skládá ze dvou hlavních částí a je uvedena na obrázku \ref{fig:cJTAG_sel}. Nejdříve je \hl{třeba} deaktivovat funkcionalitu probíhajícího komunikačního režimu. Tato část se nazývá "Selection Escape" sekvence. Tato sekvence uvozuje následující sekvenci, určenou pro výběr komunikačního režimu, která se nazývá "Selection Sequence". \cite{IEEE_1149-7}
+Aktivační sekvence se skládá ze dvou hlavních částí a je uvedena na obrázku \ref{fig:cJTAG_sel}. Nejdříve je třeba deaktivovat funkcionalitu probíhajícího komunikačního režimu. Tato část se nazývá "Selection Escape" sekvence. Tato sekvence uvozuje následující sekvenci, určenou pro výběr komunikačního režimu, která se nazývá "Selection Sequence". \cite{IEEE_1149-7}
 
 \begin{figure}[!h]
   \begin{center}
@@ -60,10 +60,10 @@ Pro přenastavení varianty \acs{JTAG} komunikace je zapotřebí nejdříve deak
 Pro tuto sekvenci jsou dle standardu IEEE 1149.7 definovány 4 varianty, které jsou odlišeny počtem pulsů vygenerovaných na \texttt{\acs{TMSC}} pinu, během setrvávající úrovně log. \texttt{1} na \texttt{\acs{TCKC}} signálu. \hl{Tyto varianty jsou uvedeny níže:}
 
 \begin{itemize}
-	\item 1 puls (2 až 3 hrany) - sekvence je rezervována pro uživatelské rozšíření. Tato možnost není podporována.
-	\item 2 pulsy (4 až 5 hran) - nastane deaktivace probíhající komunikace. Tato možnost není podporována.
+	\item 1 puls (2 až 3 hrany) - sekvence je rezervována pro uživatelské rozšíření. Tato možnost není navrženým řešením podporována.
+	\item 2 pulsy (4 až 5 hran) - nastane deaktivace probíhající komunikace. Tato možnost není navrženým řešením podporována.
 	\item 3 pulsy (6 až 7 hran) - umožňuje přepnutí na jinou variantu \acs{JTAG} komunikace. Tato možnost je v návrhu implementována a její časový průběh je zobrazen na obrázku \ref{fig:cJTAG_sel}, kde jsou zobrazeny dvě možné varianty s různou výchozí hodnotou. Po této sekvenci následuje sekvence pro volbu varianty \acs{JTAG} protokolu.
-	\item 4 a více pulsů (8 a více hran) - dojde k resetování \acs{JTAG} systému. Tato možnost není podporována.
+	\item 4 a více pulsů (8 a více hran) - dojde k resetování \acs{JTAG} systému. Tato možnost není navrženým řešením podporována.
 \end{itemize}
 
 %Pro tuto sekvenci jsou dle standardu IEEE 1149.7 definovány 4 její varianty, které jsou odlišeny počtem pulsů vygenerovaných na \acs{TMSC} pinu, během setrvávající úrovně log. 1 na \acs{TCKC} signálu. Pokud debugger během této sekvence vygeneruje 1 puls, tedy 2 až 3 hrany, je sekvence rezervována pro uživatelské rozšíření. V případě 2 pulsů (4 až 5 hran) nastane pouze deaktivace probíhající komunikace. Pro možnost přepínání jsou definovány 3 pulsy (6 až 7 hran), jak je vidět na obrázku \ref{fig:cJTAG_sel}, kde jsou zobrazeny dvě možné varianty s různou výchozí hodnotou. Oba případy mají různý počet hran, ale počet nástupných hran je vždy stejný. Po takto odeslané sekvenci následuje sekvence pro volbu varianty \acs{JTAG} protokolu, což je také jediná podporovaná varianta v rámci návrhu popsaného v této kapitole. Pokud jsou odeslány 4 a více pulsů (8 a více hran), dojde k resetu. Dříve popsané varianty nejsou v rámci návrhu popsaného v této kapitole podporovány, z důvodu jejich postradatelnosti pro přepínání mezi dvou a čtyřvodičovým rozhraním. \cite{IEEE_1149-7}
@@ -103,7 +103,7 @@ První část sekvence má konstantní délku 4 bity. První dva bity musí mít
 			\hline
 			\texttt{1100} & Dvouvodičová hvězdicová topologie\\
 			\hline
-			\hl{Ostatní} & \hl{Ostatní hodnoty nejsou podporovány}\\
+			Ostatní & Ostatní hodnoty nejsou podporovány\\
 			\hline
 			\noalign{\hrule height 1.2pt}
 		\end{tabular}
@@ -112,7 +112,7 @@ První část sekvence má konstantní délku 4 bity. První dva bity musí mít
 \end{table}
 
 \subsubsection{Část rozšiřující informace o výběru varianty - \acs{EC}}
-Druhou částí aktivační sekvence je čtyřbitová hodnota nazvaná \acl{EC}. Tato hodnota pouze doplňuje informace o výběru varianty \acs{JTAG} komunikace. Spodní tři bity udávají informace o výchozím stavu řídicího stavového automatu \acs{TAP} a o dodatečné ochraně před současným buzením pinů \texttt{\acs{TMS}} a \texttt{\acs{TDO}}. \hl{V rámci navrženého řešení je podporován výchozí stav stavového automatu \textit{Run-Test/Idle} nebo \textit{Test-Logic-Reset} a deaktivovaná dodatečná ochrana. Tomu odpovídají očekávané hodnoty log. \texttt{0}.} Nejvíce významný bit (\acs{MSB}) nese informaci o krátké, nebo dlouhé variantě popisované aktivační sekvence. Dlouhá forma aktivační sekvence obsahuje navíc hodnotu registru pro funkcionalitu, která není v návrhu implementována. Z tohoto důvodu musí být vždy zvolena krátká forma aktivační sekvence, které odpovídá hodnota log. \texttt{1} tohoto bitu. Hodnota této části aktivační sekvence musí být tedy vždy \texttt{1000}. \cite{IEEE_1149-7}
+Druhou částí aktivační sekvence je čtyřbitová hodnota nazvaná \acl{EC}. Tato hodnota pouze doplňuje informace o výběru varianty \acs{JTAG} komunikace. Spodní tři bity udávají informace o výchozím stavu řídicího stavového automatu \acs{TAP} a o dodatečné ochraně před současným buzením pinů \texttt{\acs{TMS}} a \texttt{\acs{TDO}}. V rámci navrženého řešení je podporován výchozí stav stavového automatu \textit{Run-Test/Idle} nebo \textit{Test-Logic-Reset} a deaktivovaná dodatečná ochrana. Tomu odpovídají očekávané hodnoty log. \texttt{0}. Nejvíce významný bit (\acs{MSB}) nese informaci o krátké, nebo dlouhé variantě popisované aktivační sekvence. Dlouhá forma aktivační sekvence obsahuje navíc hodnotu registru pro funkcionalitu, která není v návrhu implementována. Z tohoto důvodu musí být vždy zvolena krátká forma aktivační sekvence, které odpovídá hodnota log. \texttt{1} tohoto bitu. Hodnota této části aktivační sekvence musí být tedy vždy \texttt{1000}. \cite{IEEE_1149-7}
 
 \subsubsection{Kontrolní část - \acs{CP}}
 Poslední část aktivační sekvence slouží k prodloužení sekvence ze strany debuggeru nebo k vyvolání resetu. Prodloužení sekvence může být pro některé implementace debuggerů výhodné, pokud je třeba prodleva před začátkem samotné komunikace pro přípravu dat. Možnost sekvenci prodloužit je v návrhu popsaném v této kapitole realizováno. Vyvolání resetu v rámci aktivační sekvence není navrženým řešením podporováno. \cite{IEEE_1149-7}
@@ -163,7 +163,7 @@ Jelikož navrženým systémem je podporováno pouze prodloužení aktivační s
 \end{figure}
 
 \section{Implementace modulu pro dvouvodičový \acs{JTAG} protokol}
-Navržený obvod pro detekci aktivační sekvence a převod vstupních signálů je realizován jako převodník, který je předřazen stávajícímu systému pro testování \acs{RISC-V} popsanému v kapitole \ref{sec:risc-v_dbg} a také navrženému rozšiřujícímu modulu popsanému v kapitole \ref{jtag_ap}. Navržené řešení bylo popsáno v jazyce \acs{VHDL} a jeho funkcionalita byla ověřena pomocí simulace. \hl{Verifikační prostředí pro simulaci bylo vytvořeno v jazyce SystemVerilog a simulace obvodu byla provedena v simulátoru \textit{Xcelium} od firmy \textit{Cadence}.}
+Navržený obvod pro detekci aktivační sekvence a převod vstupních signálů je realizován jako převodník, který je předřazen stávajícímu systému pro testování \acs{RISC-V} popsanému v kapitole \ref{sec:risc-v_dbg} a také navrženému rozšiřujícímu modulu popsanému v kapitole \ref{jtag_ap}. Navržené řešení bylo popsáno v jazyce \acs{VHDL} a jeho funkcionalita byla ověřena pomocí simulace. Verifikační prostředí pro simulaci bylo vytvořeno v jazyce SystemVerilog a simulace obvodu byla provedena v simulátoru \textit{Xcelium} od firmy \textit{Cadence}.
 
 \subsection{Základní popis návrhu}	\label{subsec:cJTAG_adapter}
 %TODO: - nakreslit blok a v nem muxování a clk gating 
@@ -191,9 +191,9 @@ Navržený obvod je taktován pouze testovacím hodinovým signálem \texttt{\ac
 \subsection{Detekce úvodní sekvence pro přepnutí \acs{JTAG} protokolu}	\label{subsec:sel_escape_det}
 Pro detekci sekvence určené pro přepínání mezi dvou a čtyřvodičovou variantou \acs{JTAG} protokolu, popsané v kapitole \ref{subsec:sel_escape}, byl navržen obvod, jehož schéma je zobrazeno na obrázku \ref{fig:cJTAG_escape_circuit}. Tato implementace obvodu pro detekci byla inspirována příkladem možné implementace uvedeném ve standardu IEEE 1149.7.
 
-Jelikož "Escape" sekvence spočívá v generování pulsů na signálu \texttt{\acs{TMSC}} v době, kdy je signál \texttt{\acs{TCKC}} držen v log. 1. je třeba pulsy detekovat. V obvodu na obrázku se nachází 4-bitový posuvný registr, na jehož sériový vstup je přivedena hodnota log. 1. Na tento posuvný registr je přiveden hodinový signál \texttt{sr\_clk}, který je generován logickou funkcí \textit{XNOR}, tedy ekvivalencí referenčního signálu \texttt{tmsc\_fq} navzorkovaného poslední sestupnou hranou hodinového signálu \texttt{\acs{TCKC}}. \hl{Podle počtu nástupných hran vygenerovaných na vstupu {\texttt{\acs{TMSC}}}, během {\texttt{\acs{TCKC}}} signálu setrvávajícího na úrovni log. 1, je určena hodnota posuvného registru. Podle hodnoty posuvného registru je poté nastaven vždy jeden ze signálů \texttt{reset\_detect}, \texttt{select\_detect}, \texttt{deselect\_detect} nebo \texttt{custom\_detect}.} % podle počtu nástupných hran vygenerovaných na vstupu \acs{TMSC}, během \acs{TCKC} signálu setrvávajícího na úrovni log. 1. 
+Jelikož "Escape" sekvence spočívá v generování pulsů na signálu \texttt{\acs{TMSC}} v době, kdy je signál \texttt{\acs{TCKC}} držen v log. 1. je třeba pulsy detekovat. V obvodu na obrázku se nachází 4-bitový posuvný registr, na jehož sériový vstup je přivedena hodnota log. 1. Na tento posuvný registr je přiveden hodinový signál \texttt{sr\_clk}, který je generován logickou funkcí \textit{XNOR}, tedy ekvivalencí referenčního signálu \texttt{tmsc\_fq} navzorkovaného poslední sestupnou hranou hodinového signálu \texttt{\acs{TCKC}}. Podle počtu nástupných hran vygenerovaných na vstupu {\texttt{\acs{TMSC}}}, během {\texttt{\acs{TCKC}}} signálu setrvávajícího na úrovni log. 1, je určena hodnota posuvného registru. Podle hodnoty posuvného registru je poté nastaven vždy jeden ze signálů \texttt{reset\_detect}, \texttt{select\_detect}, \texttt{deselect\_detect} nebo \texttt{custom\_detect}. % podle počtu nástupných hran vygenerovaných na vstupu \acs{TMSC}, během \acs{TCKC} signálu setrvávajícího na úrovni log. 1. 
 
-\hl{Neméně důležitou částí obvodu jsou dva klopné obvody generující asynchronní reset \texttt{(sr\_rst\_n)} pro posuvný registr. Reset je třeba generovat vždy v případě hodnoty log. 0 na hodinovém signálu {\texttt{\acs{TCKC}}}, protože posuvný registr musí být resetován vždy mimo Escape sekvenci.} %Jelikož reset posuvného registru je aktivní při hodnotě log. 0, je tedy generován sestupnou hranou signálu \acs{TCKC}, která překlopí první klopný obvod a hodnoty na vstupu hradla \textit{XNOR} budou rozdílné. Nástupná hrana signálu \acs{TCKC} překlopí druhý klopný obvod a vstupy hradla budou vždy totožné, čímž je reset vždy uvolněn.
+Neméně důležitou částí obvodu jsou dva klopné obvody generující asynchronní reset \texttt{(sr\_rst\_n)} pro posuvný registr. Reset je třeba generovat vždy v případě hodnoty log. 0 na hodinovém signálu {\texttt{\acs{TCKC}}}, protože posuvný registr musí být resetován vždy mimo Escape sekvenci. %Jelikož reset posuvného registru je aktivní při hodnotě log. 0, je tedy generován sestupnou hranou signálu \acs{TCKC}, která překlopí první klopný obvod a hodnoty na vstupu hradla \textit{XNOR} budou rozdílné. Nástupná hrana signálu \acs{TCKC} překlopí druhý klopný obvod a vstupy hradla budou vždy totožné, čímž je reset vždy uvolněn.
 
 Jelikož pro návrh popsaný v této kapitole je uvažována pouze detekce tří pulsů ("Selection Sequence"), je dále obvodem zpracováván pouze signál \texttt{select\_detect}. Ostatní signály příslušející jiným variantám nejsou dále využívány, ale jsou generovány dle obvodu na obrázku pro případné budoucí využití.
 
@@ -256,7 +256,7 @@ Výchozím stavem je stav \textbf{S\_IDLE}, ve kterém automat setrvává a je d
 \end{figure}
 
 \section{Zhodnocení návrhu modulu pro dvouvodičový\\ \acs{JTAG} protokol}
-V této kapitole byl popsán formát přenosu dat přes dvouvodičové \acs{JTAG} rozhraní, definice aktivační sekvence pro deaktivování probíhající komunikace a výběr jednotlivých variant \acs{JTAG} rozhraní, definovaná standardem IEEE 1149.7. V rámci popisu možností byly zdůrazněny vlastnosti implementované v rámci této práce, přičemž standard IEEE 1149.7. definuje mnoho dalších možností. Dle standardu by byl návrh celého systému výrazně komplexnější a velmi náročný na implementaci. \hl{Celkový systém definovaný standardem by bylo navíc zbytečné realizovat, protože takový systém již existuje a jeho pokročilé funkce nejsou v rámci návrhu uvedeného v této práci potřebné.}
+V této kapitole byl popsán formát přenosu dat přes dvouvodičové \acs{JTAG} rozhraní, definice aktivační sekvence pro deaktivování probíhající komunikace a výběr jednotlivých variant \acs{JTAG} rozhraní, definovaná standardem IEEE 1149.7. V rámci popisu možností byly zdůrazněny vlastnosti implementované v rámci této práce, přičemž standard IEEE 1149.7. definuje mnoho dalších možností. Dle standardu by byl návrh celého systému výrazně komplexnější a velmi náročný na implementaci. Celkový systém definovaný standardem by bylo navíc zbytečné realizovat, protože takový systém již existuje a jeho pokročilé funkce nejsou v rámci návrhu uvedeného v této práci potřebné.
 
 Pro implementaci byla tedy zvolena podpora dvouvodičového \acs{JTAG} rozhraní ve formátu OSCAN1 a možnost přepnou mezi dvou a čtyřvodičovým rozhraním. Zapojení do hvězdicové topologie, resetování v rámci deaktivační sekvence nebo pomocí hodnoty kontrolní části aktivační sekvence, jiné formáty serializace dat a další funkce definované standardem nebyly implementovány z důvodu jejich nepotřebnosti. \cite{IEEE_1149-7}
 
