--- a/text/zkratky.tex
+++ b/text/zkratky.tex
@@ -49,27 +49,8 @@
 		{Nejvíce významný bit}
 	\acro{RISC-V}
 		{Reduced Instruction Set Computer - V}
+	\acro{RISC}
+		{Reduced Instruction Set Computer}
 	\acro{PULP}
-		{Parallel Ultra Low Power}
-	\acro{FIFO}
-		{First In, First Out}
-	\acro{RTS}
-		{Request To Send}
-	\acro{CTS}
-		{Clear To Send}
-	\acro{DTR}
-		{Data Terminal Ready}
-	\acro{DSR}
-		{Data Set Ready}
-	\acro{DTE}
-		{Data Terminal Equipment}
-	\acro{DCE}
-		{Data Circuit-terminating Equipment}
-	\acro{JTAG}
-		{Joint Test Action Group}
-	\acro{ILA}
-		{Integrated Logic Analyzer}
-	\acro{ICON}
-		{Integraterd CONtroller}
-		
+		{Parallel Ultra Low Power}	
 \end{acronym}
