uvod + doladeni nekterych nalezitosti SP

--- a/sablona-prace.tex
+++ b/sablona-prace.tex
@@ -186,7 +186,7 @@
 \makedeclaration
 
 %%% Vysázení poděkování
-\makeacknowledgement
+%\makeacknowledgement
 
 %%% Vysázení obsahu
 \tableofcontents
@@ -209,13 +209,13 @@
 %%% Vložení souboru 'text/uvod.tex' s úvodem
 \include{text/uvod}
 
-%Vlozeni souboru s prvni kapitolou (JTAG rozhraní rpo RISC-V degugování)
+%Vlozeni souboru s prvni kapitolou (JTAG rozhraní pro RISC-V degugování)
 \include{text/jtag_riscv}
 
-%Vlozeni souboru s druhou kapitolou (JTAG rozhraní rpo RISC-V degugování)
+%Vlozeni souboru s druhou kapitolou (JTAG rozhraní 2w)
 \include{text/jtag_2w}
 
-%Vlozeni souboru s třetí kapitolou (JTAG rozhraní rpo RISC-V degugování)
+%Vlozeni souboru s třetí kapitolou (Advanced protocol)
 \include{text/jtag_ap}
 
 %%% Vložení souboru 'text/cile.tex' s úvodem
