--- a/text/uvod.tex
+++ b/text/uvod.tex
@@ -4,7 +4,7 @@
 
 Tématem této semestrální práce je návrh modulu pro dvouvodičový \acs{JTAG} protokol a rozšiřujícího protokolu pro přístup na systémovou sběrnici \acs{RISC-V} procesoru.
 
-Cílem semestrální práce je navrhnout modul podporující komunikaci pomocí dvouvodičové varianty \acs{JTAG} protokolu s možností přepínat mezi touto a čtyřvodičovou variantou dle standardu IEEE 1149.7. Dalším cílem je návrh časově optimalizovaný protokol využívající \acs{JTAG} rozhraní pro testovaní procesorů \acs{RISC-V}.
+Cílem semestrální práce je navrhnout modul podporující komunikaci pomocí dvouvodičové varianty \acs{JTAG} protokolu s možností přepínat mezi touto a čtyřvodičovou variantou dle standardu IEEE 1149.7. Dalším cílem je návrh časově optimalizovaného protokolu protokol pro přístup na systémovou sběrnici \acs{RISC-V} procesoru, využívající \acs{JTAG} rozhraní.
 
 V úvodní části práce je obecně přestaveno testovací rozhraní \acs{JTAG} a základní princip fungování řídicího stavového automatu dle příslušného standardu IEEE 1149.1. Dále je uveden testovací systém pro procesory \acs{RISC-V}, který je použitý pro přístup na systémovou sběrnici procesoru. Princip fungování systémové sběrnice použitého procesorového jádra je také představen v rámci úvodní kapitoly.
 
