uprava podle cj korektury + nastrel abstraktu

--- a/nastaveni.tex
+++ b/nastaveni.tex
@@ -112,7 +112,7 @@
 Překlad abstraktu
 (v~angličtině, pokud je originálním jazykem čeština či slovenština; v~češtině či slovenštině, pokud je originálním jazykem angličtina)
 ]{%
-Abstrakt práce v~originálním jazyce
+Tato semestrální práce se zabývá návrhem modulu pro dvouvodičový \acs{JTAG} protokol a návrhem rozšiřujícího protokolu pro přístup na systémovou sběrnici \acs{RISC-V} procesoru. Navržený modul bude použit pro testování integrovaného obvodu pomocí dvouvodičového rozhraní, za účelem redukce počtu pinů. Rozšiřující protokol bude sloužit pro časovou optimalizaci testování integrovaného obvodu. Práce obsahuje popis systému pro testování \acs{RISC-V} procesorů, navrženého modulu pro dvouvodičový \acs{JTAG} protokol, včetně způsobu jeho implementace, a návrhu optimalizovaného protokolu.
 }
 
 %%% Klíčová slova
