--- a/text/zaver.tex
+++ b/text/zaver.tex
@@ -4,12 +4,12 @@
 
 Cílem práce bylo navrhnout modul podporující komunikaci pomocí dvouvodičového \acs{JTAG} protokolu a rozšiřujícího protokolu pro přístup na systémovou sběrnici \acs{RISC-V} procesoru.
 
-V úvodní kapitole je uveden princip fungování \acs{JTAG} rozhraní, systém pro testování \acs{RISC-V} procesorů, který je používaný v projektu pro testování daného procesorového jádra a princip fungování systémové sběrnice tohoto procesoru. Princip fungování testovacího systému v tomto uspořádání a fungování systémové sběrnice bylo třeba nastudovat, aby bylo možné navrhnout sekundární, časově optimalizovaný protokol pro přístup na systémovou sběrnici, který je popsaný v kapitole \ref{jtag_ap}.
+V úvodní kapitole je uveden princip fungování \acs{JTAG} rozhraní, systém pro testování \acs{RISC-V} procesorů, který je používaný v projektu pro testování daného procesorového jádra, a princip fungování systémové sběrnice tohoto procesoru. Princip fungování testovacího systému v tomto uspořádání a fungování systémové sběrnice bylo třeba nastudovat, aby bylo možné navrhnout sekundární, časově optimalizovaný protokol pro přístup na systémovou sběrnici, který je popsaný v kapitole \ref{jtag_ap}.
 
 Druhá kapitola popisuje vybraný princip komunikace dvouvodičovou variantou \acs{JTAG} protokolu dle standardu IEEE 1149.7 a způsob implementace modulu podporující tento způsob komunikace. Pro zvolení vhodné varianty dvouvodičové \acs{JTAG} komunikace bylo třeba nastudovat příslušné části standardu IEEE 1149.7, což bylo poměrně náročné, protože tento standard je velmi obsáhlý.
 
 V navazující diplomové práci bude popsán také způsob implementace hardwarového řešení podporujícího navržený optimalizovaný protokol. Dále bude třeba uvést výsledky funkční simulace některých částí navržených modulů a také ověřit správnou funkci v obvodu \acs{FPGA}.
 
-Pro otestování modulu pro podporu komunikace navrženým protokolem v obvodu \acs{FPGA}, bude zapotřebí rozšířit softwarové aplikační prostředí debuggeru o funkce, které budou odesílat a vyhodnocovat data přijatá přes \acs{JTAG} rozhraní dle protokolů navržených v podkapitole \ref{sec:protokoly}. Tato část práce bude nejnáročnější z plánovaných činností z důvodu menších zkušeností s programováním softwaru. Nicméně, realizace by mi měla zabrat maximálně dva měsíce. Po dokončení realizace softwarových funkcí bude třeba vymyslet vhodný test pro otestování funkčnosti a porovnání časové efektivity nově navrženého protokolu, oproti původnímu přístupu popsanému v podkapitole \ref{subsec:dm_sba}.
+Pro otestování modulu pro podporu komunikace navrženým protokolem v obvodu \acs{FPGA}, bude zapotřebí rozšířit softwarové aplikační prostředí debuggeru o funkce, které budou odesílat a vyhodnocovat data přijatá přes \acs{JTAG} rozhraní dle protokolů navržených v podkapitole \ref{sec:protokoly}. Tato část práce bude z plánovaných činností nejnáročnější z důvodu menších zkušeností s programováním softwaru. Realizace by přesto neměla trvat déle než dva měsíce. Po dokončení realizace softwarových funkcí bude třeba vymyslet vhodný test pro otestování funkčnosti a porovnání časové efektivity nově navrženého protokolu s původním přístupem popsaným v podkapitole \ref{subsec:dm_sba}.
 
-V rámci navrženého modulu pro podporu nově vytvořeného protokolu, by bylo dobré implementovat také podporu používání variant protokolů s automatickou inkrementací adresy. Například pro možnost zapisovat nebo číst rozsáhlejší bloky dat z paměti. Tyto varianty protokolů jsou již navrženy a jejich doplnění do stávajícího návrhu by nemělo být příliš časově náročná.
+V rámci navrženého modulu, pro podporu nově vytvořeného protokolu, by bylo dobré implementovat také podporu používání obou variant protokolů s automatickou inkrementací adresy. Tato funkcionalita může být využita například pro zápis nebo čtení rozsáhlejších bloků dat z paměti. Tyto varianty protokolů jsou již navrženy a jejich doplnění do stávajícího návrhu by nemělo být příliš časově náročné.
