--- a/text/uvod.tex
+++ b/text/uvod.tex
@@ -2,13 +2,13 @@
 \phantomsection
 \addcontentsline{toc}{chapter}{Úvod}
 
-Tématem této semestrální práce je návrh modulu pro dvouvodičový \acs{JTAG} protokol a rozšiřujícího protokolu pro přístup na systémovou sběrnici \acs{RISC-V} procesoru.
+Tématem této semestrální práce je návrh modulu pro dvouvodičový \acs{JTAG} protokol a návrh rozšiřujícího protokolu pro přístup na systémovou sběrnici \acs{RISC-V} procesoru.
 
-Cílem semestrální práce je navrhnout modul podporující komunikaci pomocí dvouvodičové varianty \acs{JTAG} protokolu s možností přepínat mezi touto a čtyřvodičovou variantou dle standardu IEEE 1149.7. Dalším cílem je návrh časově optimalizovaného protokolu protokol pro přístup na systémovou sběrnici \acs{RISC-V} procesoru, využívající \acs{JTAG} rozhraní.
+Cílem semestrální práce je navrhnout modul podporující komunikaci pomocí dvouvodičové varianty \acs{JTAG} protokolu s možností přepínat mezi touto a čtyřvodičovou variantou dle standardu IEEE 1149.7. Dalším cílem je návrh časově optimalizovaného protokolu pro přístup na systémovou sběrnici \acs{RISC-V} procesoru využívající \acs{JTAG} rozhraní.
 
 V úvodní části práce je obecně přestaveno testovací rozhraní \acs{JTAG} a základní princip fungování řídicího stavového automatu dle příslušného standardu IEEE 1149.1. Dále je uveden testovací systém pro procesory \acs{RISC-V}, který je použitý pro přístup na systémovou sběrnici procesoru. Princip fungování systémové sběrnice použitého procesorového jádra je také představen v rámci úvodní kapitoly.
 
 Druhá kapitola se věnuje principu komunikace dvouvodičovou variantou \acs{JTAG} protokolu, způsobu aktivace dvouvodičového režimu a také možnosti přepnutí na původní čtyřvodičovou variantu. Dále je v této kapitole popsán způsob návrhu a implementace modulu zajišťujícího uvedenou funkcionalitu.
 
-V poslední části práce je popsán navržený protokol pro přístup na systémovou sběrnici procesoru. Tento protokol bude využitý jako vedlejší možnost přístupu na systémovou sběrnici, která je časově efektivnější oproti stávajícímu způsobu využívajícího systém pro testování \acs{RISC-V} procesorů. Uveden je také způsob zkrácení přenášené adresy registru, ke kterému je přistupováno a možnosti délky přenášených dat. Protokol je navržený ve dvou variantách, které jsou popsány detailněji v jednotlivých částech této kapitoly a jsou zhodnoceny jejich vlastnosti.
+V poslední části práce je popsán navržený protokol pro přístup na systémovou sběrnici procesoru. Tento protokol bude využitý jako vedlejší možnost přístupu na systémovou sběrnici, která je časově efektivnější oproti stávajícímu způsobu využívajícím systém pro testování \acs{RISC-V} procesorů. Uveden je také způsob zkrácení přenášené adresy registru, ke kterému je přistupováno, a možnosti volby délky přenášených dat. Protokol je navržený ve dvou variantách, které jsou popsány detailněji v jednotlivých částech této kapitoly. Následně jsou také zhodnoceny jejich vlastnosti.
 
