--- a/nastaveni.tex
+++ b/nastaveni.tex
@@ -109,10 +109,9 @@
 
 %%% Abstrakt
 \abstract[%
-Překlad abstraktu
-(v~angličtině, pokud je originálním jazykem čeština či slovenština; v~češtině či slovenštině, pokud je originálním jazykem angličtina)
+This semestral thesis deals with the design of an IP block to handle 2-wire \acs{JTAG} protocol and design of extended protocol for \acs{RISC-V} processor system bus access. Designed IP block will be used for the IC testing via 2-wire \acs{JTAG} interface, for the purpose of pin count reduction. The extended protocol will be used for IC testing time optimization. The thesis includes descriptions of the \acs{RISC-V} testing system, designed IP block for 2-wire \acs{JTAG} protocol handling and description of its implementation, and design of optimized protocol. 
 ]{%
-Tato semestrální práce se zabývá návrhem modulu pro dvouvodičový \acs{JTAG} protokol a návrhem rozšiřujícího protokolu pro přístup na systémovou sběrnici \acs{RISC-V} procesoru. Navržený modul bude použit pro testování integrovaného obvodu pomocí dvouvodičového rozhraní, za účelem redukce počtu pinů. Rozšiřující protokol bude sloužit pro časovou optimalizaci testování integrovaného obvodu. Práce obsahuje popis systému pro testování \acs{RISC-V} procesorů, navrženého modulu pro dvouvodičový \acs{JTAG} protokol, včetně způsobu jeho implementace, a návrhu optimalizovaného protokolu.
+Tato semestrální práce se zabývá návrhem modulu pro dvouvodičový \acs{JTAG} protokol a návrhem rozšiřujícího protokolu pro přístup na systémovou sběrnici \acs{RISC-V} procesoru. Navržený modul bude použit pro testování integrovaného obvodu pomocí dvouvodičového \acs{JTAG} rozhraní, za účelem redukce počtu pinů. Rozšiřující protokol bude sloužit pro časovou optimalizaci testování integrovaného obvodu. Práce obsahuje popisy systému pro testování \acs{RISC-V} procesorů, navrženého modulu pro dvouvodičový \acs{JTAG} protokol, včetně způsobu jeho implementace, a návrhu optimalizovaného protokolu.
 }
 
 %%% Klíčová slova
